--- a/index.html
+++ b/index.html
@@ -109,16 +109,9 @@
                         </li>
                         <li class="write">
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Browser Testing & Debugging
                         </li>
-                        <li class="write">
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li class="write">
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
+
                     </ul>
                 </div>
             </section>
