--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                         <div id="map"></div>
                         <img src="" class="food-pic" />
                         <div class="move">
-                            <a href="javascript:return false;" id="prv">이전</a>||<a href="javascript:return false" id="next">다음</a>
+                            <input type="button" value="이전" id="prv" />
+                            <input type="button" value="다음" id="next" />
                         </div>
 
                     </div>
