--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                     </div>
                     <div class="mb-5">
                         <p class="lead">나이 : 29살</p>
+                        <p class="lead">주소지 : 대구 서구</p>
+                        <p class="lead">연락처 : 010-6680-9683</p>
+                        <p class="lead">이메일 : ababqw123@naver.com</p>
                         <p class="lead">학력 : 대구대학교</p>
                         <p class="lead">전공 : 전자전기공학과</p>
                     </div>
@@ -101,15 +104,15 @@
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                         <li class="list-inline-item"><i class="fab fa-git-square"></i></li>
                     </ul>
-                    <div class="subheading mb-3 skill">Workflow</div>
+                    <div class="subheading mb-3 skill">자격증</div>
                     <ul class="fa-ul mb-0">
                         <li class="write">
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            정보처리기사
                         </li>
                         <li class="write">
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Browser Testing & Debugging
+                            SQLD
                         </li>
 
                     </ul>
