--- a/index.html
+++ b/index.html
@@ -1,94 +1,75 @@
 <!DOCTYPE html>
-<html lang="ko">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>JaeYeong Intro</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/personal.css" rel="stylesheet" />
 
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/jay-styles.css" rel="stylesheet" />
-    </head>
+</head>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger mb-5" href="#page-top">
-                <span class="d-block d-lg-none">About me</span>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">JaeYeong An</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/AnJaeYeong_1.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">소개</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">학력</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">기술스택</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#dd">개발연습</a></li>
                 </ul>
             </div>
         </nav>
         <!-- Page Content-->
-        <div class="container-fluid p-1">
+        <div class="container-fluid p-0">
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        안재영
+                        JaeYeong
+                        <span class="text-primary">An</span>
                     </h1>
-                    <div class="subheading mb-4">
-                        대구광역시 서구 중리동
-                        <a href="ababqw123@gmail.com">ababqw123@gmail.com</a>
+                    <div class="subheading mb-5">
+                        대구광역시 서구 · 010-6680-9683 ·
+                        <a href="ababqw123@naver.com">ababqw123@naver.com</a>
                     </div>
-                    <div class="mb-5">
-                        <p class="lead">나이 : 29살</p>
-                        <p class="lead">주소지 : 대구 서구</p>
-                        <p class="lead">연락처 : 010-6680-9683</p>
-                        <p class="lead">이메일 : ababqw123@naver.com</p>
-                        <p class="lead">학력 : 대구대학교</p>
-                        <p class="lead">전공 : 전자전기공학과</p>
-                    </div>
-
+                    <p class="lead mb-5">Goorumedu에서 javascript 및 python을 이용한 웹 개발 교육 이수를 하였고,</p>
+                    <p class="lead mb-5">현재는 KOSA에서 ASP.net을 활용한 웹 개발 교육을 받고 있습니다.</p>
+                    <br />
                     <div class="social-icons">
-                        <a class="social-icon" href="https://github.com/ababqw123/page"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://jaeyeong-page.netlify.app/page.html"><i class="fas fa-file-code"></i></a>
-                        <a class="social-icon" href="https://www.instagram.com/ababqw123/"><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="https://jaeyeong-page.netlify.app/page.html"><i class="fa-solid fa-b"></i></a>
+                        <a class="social-icon" href="https://github.com/ababqw123/page" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/ababqw123"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </section>
+            </div>
             <hr class="m-0" />
-            <!-- Experience-->
-            <section class="resume-section" id="experience">
+            <!-- Education-->
+            <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <p class="mb-7 content-name">Experience</p>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-7">
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">이카운트 교육 시작</h3>
-                            <div class="subheading mb-3">웹 개발자가 되기 위한 노력</div>
-                            <p class="write">웹 개발자가 되기 위해서 개인적인 공부가 아닌 전문적인 교육을 받는 좋은 기회가 되었습니다.</p>
+                            <h3 class="mb-0">대구대학교</h3>
+                            <div class="subheading mb-3">전자전기공학과</div>
+                            <p>학점: 3.39</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2022 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-7">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">프론트엔드 공부</h3>
-                            <div class="subheading mb-3">웹 개발자를 위한 첫번째 발걸음</div>
-                            <p class="write">웹 개발자가 되기 위해서 책과 온라인 강의를 활용하여 공부를 하였지만, 부족한 지식이 많았고, 질문의 기회가 없어서 지식을 얻기에는 부족했습니다.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary year">April 2021 - February 2022</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">첫 직장 - 생산관리팀</h3>
-                            <div class="subheading mb-3">전공을 맞춰간 첫번째 직장</div>
-                            <p class="write">직장에서 일하는 도중 웹 개발자를 꿈꾸며, 틈틈히 웹 개발자에 대해 공부하고, 기초 지식을 쌓았습니다.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2019 - June 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2013 - 2019</span></div>
                     </div>
                 </div>
             </section>
@@ -96,53 +77,27 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <p class="mb-5 content-name">Skills</p>
-                    <div class="subheading mb-3 skill">개발 언어 및 Tools</div>
+                    <h2 class="mb-5">기술스택</h2>
+                    <div class="subheading mb-3">사용해본 스킬</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-git-square"></i></li>
+                        <li class="list-inline-item" title="HTML"><i><img class="iconimg" src="assets/img/html.png" widh="80" height="80" /></i></li>
+                        <li class="list-inline-item" title="CSS"><i><img class="iconimg" src="assets/img/css.png" widh="80" height="80" /></i></li>
+                        <li class="list-inline-item" title="javascript"><i><img class="iconimg" src="assets/img/js.png" widh="30" height="70" /></i></li>
+                        <li class="list-inline-item" title="C#"><i><img class="iconimg" src="assets/img/cs.png" widh="70" height="70" /></i></li>
+                        <li class="list-inline-item" title="MS-SQL"><i><img class="iconimg" src="assets/img/sql.jpg" widh="70" height="70" /></i></li>
                     </ul>
-                    <div class="subheading mb-3 skill">자격증</div>
-                    <ul class="fa-ul mb-0">
-                        <li class="write">
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            정보처리기사
-                        </li>
-                        <li class="write">
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            SQLD
-                        </li>
-
-                    </ul>
-                </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <p class="mb-5 content-name">Interests</p>
+            <!-- Experience-->
+            <section class="resume-section" id="dd">
+                <div class="sectiondiv">
 
-                    <div id="box">
-                        <div id="map"></div>
-                        <img src="" class="food-pic" />
-                        <div class="move">
-                            <input type="button" value="이전" id="prv" />
-                            <input type="button" value="다음" id="next" />
-                        </div>
-
-                    </div>
                 </div>
             </section>
-            <hr class="m-0" />
-        </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/jay-scripts.js"></script>
-        <script src="js/jay-map.js"></script>
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8591044f66278fd2484621cb7140724d&libraries=services"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
+
