--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#project_1">프로젝트(웹페이지)</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#project_2">프로젝트(C#)</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#project_3">프로젝트(부트스트랩/API)</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#project_4">프로젝트(Typescript)</a></li>
                 </ul>
             </div>
         </nav>
@@ -193,6 +194,24 @@
 
                     <p class = "address">GitHub :<a href="https://github.com/ababqw123/ECount-team3-introduction-page" target="_blank"> https://github.com/ababqw123/ECount-team3-introduction-page</a></p>
                     <p class = "address">주소 : <a href="https://ababqw123.github.io/ECount-team3-introduction-page" target="_blank">https://ababqw123.github.io/ECount-team3-introduction-page</a></p>
+                    
+                </div>
+            </section>
+            <section id="project_4">
+                <div class="sectiondiv">
+                    <h3>Typescript/Node.js를 이용한 로그인 페이지 및 회원가입/회원목록 조회</h3>
+                </br>
+                    <img class="img" src ="img/login.PNG" style="width:42%;">
+                    <img class="img" src ="img/main.PNG" style="width:42%;">
+                    <img class="img" src ="img/register.PNG" style="width:42%;">
+                    <img class="img" src ="img/list.PNG" style="width:42%;">
+                </div>
+                <hr class="m-5" />
+                <div>
+                    <h4>● TypeScript와 node.js Json을 이용한 회원가입/로그인/회원목록 페이지 구현</h4><br>
+                    <h4>● Promise chaining을 사용하여 로그인 및 회원가입 정책 구현(로그인 기간/회사 사용기간 등)</h4><br>
+
+                    <p class = "address">GitHub :<a href="https://github.com/ababqw123/loginpage/" target="_blank"> https://github.com/ababqw123/loginpage/</a></p>
                     
                 </div>
             </section>
